--- a/aestheticdialogs/src/main/res/layout/dialog_flat.xml
+++ b/aestheticdialogs/src/main/res/layout/dialog_flat.xml
@@ -16,23 +16,22 @@
         android:layout_height="@dimen/popup_height"
         android:minHeight="@dimen/popup_height"
         android:orientation="vertical"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:layout_gravity="center"
         android:background="@drawable/rounded_white_bg">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/dialog_icon_flat"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             app:srcCompat="@drawable/ic_info_blue_24dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginBottom="10dp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/dialog_title_flat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Oups !"
+            android:text="Oops !"
             android:textStyle="bold"
             android:textSize="20sp"
             android:layout_marginBottom="10dp"/>
@@ -47,7 +46,7 @@
             android:layout_marginEnd="10dp"
             android:maxLines="3"
             android:ellipsize="end"
-            android:text="An error occured on remote service, please try again later"/>
+            android:text="An error occured on remote service, please try again later."/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_action_flat"
