--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
 <LinearLayout
@@ -12,16 +11,13 @@
     tools:context=".MainActivity"
     android:gravity="center_horizontal"
     android:orientation="vertical">
-
-
+    
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/ic_dialog"
         android:layout_marginTop="10dp"/>
-
-
-
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,7 +27,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FLASH DIALOG"
+            android:text="@string/flash_dialog"
             android:layout_gravity="center_horizontal"
             android:textStyle="italic|bold"
             android:layout_marginBottom="5dp"/>
@@ -41,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show Flash success"
+            android:text="@string/show_flash_success"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -52,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show Flash error"
+            android:text="@string/show_flash_error"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="20dp"
@@ -61,7 +57,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="CONNECTIFY DIALOG"
+            android:text="@string/connectify_dialog"
             android:layout_gravity="center_horizontal"
             android:textStyle="italic|bold"
             android:layout_marginBottom="5dp"/>
@@ -77,7 +73,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Light"
+                android:text="@string/light_theme"
                 android:id="@+id/rb_connectify_light"
                 android:layout_gravity="center_horizontal"
                 android:checked="true"
@@ -86,7 +82,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dark"
+                android:text="@string/dark_theme"
                 android:id="@+id/rb_connectify_dark"
                 android:layout_gravity="center_horizontal"
                 android:checked="false"
@@ -98,7 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show connectify success"
+            android:text="@string/show_connectify_success"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -109,7 +105,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show connectify error"
+            android:text="@string/show_connectify_error"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="20dp"
@@ -119,7 +115,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TOASTER DIALOG"
+            android:text="@string/toaster_dialog"
             android:layout_gravity="center_horizontal"
             android:textStyle="italic|bold"
             android:layout_marginBottom="5dp"/>
@@ -135,7 +131,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Light"
+                android:text="@string/light_theme"
                 android:id="@+id/rb_toaster_light"
                 android:layout_gravity="center_horizontal"
                 android:checked="true"
@@ -144,7 +140,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dark"
+                android:text="@string/dark_theme"
                 android:id="@+id/rb_toaster_dark"
                 android:layout_gravity="center_horizontal"
                 android:checked="false"
@@ -156,7 +152,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show toaster error"
+            android:text="@string/show_toaster_error"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -168,7 +164,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show toaster success"
+            android:text="@string/show_toaster_success"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -179,7 +175,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show toaster warning"
+            android:text="@string/show_toaster_warning"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -190,28 +186,26 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show toaster info"
+            android:text="@string/show_toaster_info"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="20dp"
             android:onClick="onClick"/>
-
-
+        
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="EMOTION DIALOG"
+            android:text="@string/emotion_dialog"
             android:layout_gravity="center_horizontal"
             android:textStyle="italic|bold"
             android:layout_marginBottom="5dp"/>
-
 
         <Button
             android:id="@+id/btn_emotion_dialog_success"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show emotion success"
+            android:text="@string/show_emotion_success"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -222,7 +216,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show emotion error"
+            android:text="@string/show_emotion_error"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="20dp"
@@ -231,7 +225,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="DRAKE DIALOG"
+            android:text="@string/drake_dialog"
             android:layout_gravity="center_horizontal"
             android:textStyle="italic|bold"
             android:layout_marginBottom="5dp"/>
@@ -242,7 +236,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show drake success"
+            android:text="@string/show_drake_success"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -253,7 +247,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show drake error"
+            android:text="@string/show_drake_error"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="20dp"
@@ -262,7 +256,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="EMOJI DIALOG"
+            android:text="@string/emoji_dialog"
             android:layout_gravity="center_horizontal"
             android:textStyle="italic|bold"
             android:layout_marginBottom="5dp"/>
@@ -278,7 +272,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Light"
+                android:text="@string/light_theme"
                 android:id="@+id/rb_emoji_light"
                 android:layout_gravity="center_horizontal"
                 android:checked="true"
@@ -287,7 +281,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dark"
+                android:text="@string/dark_theme"
                 android:id="@+id/rb_emoji_dark"
                 android:layout_gravity="center_horizontal"
                 android:checked="false"
@@ -300,7 +294,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show emoji success"
+            android:text="@string/show_emoji_success"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -311,7 +305,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show emoji error"
+            android:text="@string/show_emoji_error"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="20dp"
@@ -320,7 +314,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="RAINBOW DIALOG"
+            android:text="@string/rainbow_dialog"
             android:layout_gravity="center_horizontal"
             android:textStyle="italic|bold"
             android:layout_marginBottom="5dp"/>
@@ -330,7 +324,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show rainbow error"
+            android:text="@string/show_rainbow_error"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -342,7 +336,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show rainbow success"
+            android:text="@string/show_rainbow_success"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -353,7 +347,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show rainbow warning"
+            android:text="@string/show_rainbow_warning"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -364,7 +358,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show rainbow info"
+            android:text="@string/show_rainbow_info"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="20dp"
@@ -374,7 +368,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FLAT DIALOG"
+            android:text="@string/flat_dialog"
             android:layout_gravity="center_horizontal"
             android:textStyle="italic|bold"
             android:layout_marginBottom="5dp"/>
@@ -390,7 +384,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Light"
+                android:text="@string/light_theme"
                 android:id="@+id/rb_flat_light"
                 android:layout_gravity="center_horizontal"
                 android:checked="true"
@@ -399,7 +393,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dark"
+                android:text="@string/dark_theme"
                 android:id="@+id/rb_flat_dark"
                 android:layout_gravity="center_horizontal"
                 android:checked="false"
@@ -411,7 +405,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show flat success"
+            android:text="@string/show_flat_success"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -422,7 +416,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show flat error"
+            android:text="@string/show_flat_error"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -433,7 +427,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show flat warning"
+            android:text="@string/show_flat_warning"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -444,7 +438,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/btn_selector"
-            android:text="Show flat info"
+            android:text="@string/show_flat_info"
             android:textColor="@color/md_white_1000"
             android:textSize="14sp"
             android:layout_marginBottom="20dp"
