--- a/aestheticdialogs/src/main/res/layout/dialog_flat.xml
+++ b/aestheticdialogs/src/main/res/layout/dialog_flat.xml
@@ -3,20 +3,21 @@
     android:id="@+id/dialog_frame_flat"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/popup_height"
+    android:minHeight="@dimen/popup_height"
+    android:layout_width="@dimen/popup_width"
+    android:minWidth="@dimen/popup_width"
     android:layout_gravity="center"
     android:gravity="center"
     android:background="@drawable/rounded_rect_blue">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/dialog_layout_flat"
-        android:layout_width="@dimen/popup_width"
-        android:minWidth="@dimen/popup_width"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/popup_height"
-        android:minHeight="@dimen/popup_height"
         android:orientation="vertical"
         android:gravity="center"
+        android:layout_marginHorizontal="4dp"
         android:layout_gravity="center"
         android:background="@drawable/rounded_white_bg">
 
